[gd_scene load_steps=20 format=3 uid="uid://bdstba266p48b"]

[ext_resource type="Script" path="res://scenes/flat_world.gd" id="1_p3qbx"]
[ext_resource type="PackedScene" uid="uid://chkrpgo484wns" path="res://player/player.tscn" id="1_v1bb4"]
[ext_resource type="Texture2D" uid="uid://d1smvxm47khur" path="res://textures/grass-ground.png" id="3_i7oj0"]
[ext_resource type="PackedScene" uid="uid://bt8tl3vaobbfr" path="res://slime/slime.tscn" id="4_jjw44"]
[ext_resource type="PackedScene" uid="uid://c0qglt1r0amhy" path="res://scenes/maze.tscn" id="7_i81qi"]
[ext_resource type="AudioStream" uid="uid://c641jr0chiv7x" path="res://other-assets/happy.wav" id="7_sl3rh"]
[ext_resource type="AudioStream" uid="uid://c48cak0qo21ol" path="res://other-assets/spooky.wav" id="8_bke3n"]
[ext_resource type="Script" path="res://scenes/maze-wall.gd" id="8_pchs4"]
[ext_resource type="PackedScene" uid="uid://dqcjj8eviapv5" path="res://scenes/maze_wall.tscn" id="9_7bilm"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2odbo"]
sky_top_color = Color(0.25098, 0.443137, 0.74902, 1)
sky_horizon_color = Color(0.596078, 0.658823, 0.717647, 1)
ground_bottom_color = Color(0.133333, 0.192157, 0.121569, 1)
ground_horizon_color = Color(0.596078, 0.658823, 0.717647, 1)

[sub_resource type="Sky" id="Sky_6kcyw"]
sky_material = SubResource("ProceduralSkyMaterial_2odbo")

[sub_resource type="Environment" id="Environment_kd5np"]
background_mode = 2
sky = SubResource("Sky_6kcyw")
tonemap_mode = 2
glow_enabled = true
volumetric_fog_density = 0.1
volumetric_fog_albedo = Color(0.282353, 0.309804, 0.27451, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_mjjxq"]
size = Vector3(100, 1, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1k34l"]
albedo_texture = ExtResource("3_i7oj0")
uv1_scale = Vector3(200, 200, 200)

[sub_resource type="BoxMesh" id="BoxMesh_8j2oj"]
material = SubResource("StandardMaterial3D_1k34l")
size = Vector3(100, 1, 100)

[sub_resource type="NavigationMesh" id="NavigationMesh_4i2ii"]
vertices = PackedVector3Array(-18.4443, 1.1, -41.5298, -16.4443, 1.1, -41.5298, -16.4443, 1.1, -43.5298, -20.9443, 1.1, -43.5298, -15.9443, 1.1, -33.5298, -15.9443, 1.1, -35.5298, -18.4443, 1.1, -35.5298, -20.9443, 1.1, -33.5298, -20.9443, 1.1, -33.5298, -18.4443, 1.1, -35.5298, -19.1943, 1.1, -36.2798, -19.1943, 1.1, -36.2798, -19.1943, 1.1, -40.7798, -20.9443, 1.1, -43.5298, -20.9443, 1.1, -33.5298, -19.1943, 1.1, -40.7798, -18.4443, 1.1, -41.5298, -20.9443, 1.1, -43.5298, -4.94427, 1.1, -40.7798, -4.94427, 1.1, -34.2798, -2.94427, 1.1, -34.2798, -2.94427, 1.1, -43.5298, -5.69427, 1.1, -41.5298, -2.94427, 1.1, -43.5298, -16.4443, 1.1, -43.5298, -16.4443, 1.1, -41.5298, -5.69427, 1.1, -41.5298, -4.94427, 1.1, -40.7798, -2.94427, 1.1, -43.5298, -2.94427, 1.1, -32.2798, -2.94427, 1.1, -34.2798, -4.94427, 1.1, -34.2798, -4.94427, 1.1, -29.5298, 8.05573, 1.1, -29.5298, 8.05573, 1.1, -31.5298, 5.80573, 1.1, -31.5298, 3.05573, 1.1, -32.2798, 5.80573, 1.1, -31.5298, 5.05573, 1.1, -32.2798, -2.19427, 1.1, -31.5298, -2.94427, 1.1, -32.2798, -4.94427, 1.1, -29.5298, 2.30573, 1.1, -31.5298, -2.19427, 1.1, -31.5298, -4.94427, 1.1, -29.5298, 8.05573, 1.1, -29.5298, 5.05573, 1.1, -32.2798, 5.05573, 1.1, -43.5298, 3.05573, 1.1, -43.5298, 3.05573, 1.1, -32.2798, 2.30573, 1.1, -31.5298, 8.05573, 1.1, -29.5298, 5.80573, 1.1, -31.5298, 3.05573, 1.1, -32.2798, -44.9443, 1.1, -18.7798, -42.9443, 1.1, -18.7798, -42.9443, 1.1, -20.7798, -42.1943, 1.1, -21.5298, -40.1943, 1.1, -21.5298, -40.1943, 1.1, -23.5298, -42.1943, 1.1, -23.5298, -42.9443, 1.1, -24.2798, -42.9443, 1.1, -35.7798, -44.9443, 1.1, -35.7798, -44.9443, 1.1, -18.7798, -42.9443, 1.1, -20.7798, -42.1943, 1.1, -21.5298, -42.1943, 1.1, -23.5298, -42.9443, 1.1, -20.7798, -42.1943, 1.1, -23.5298, -42.9443, 1.1, -24.2798, -44.9443, 1.1, -18.7798, -13.6943, 1.1, -23.5298, -15.6943, 1.1, -23.5298, -15.6943, 1.1, -21.5298, -10.9443, 1.1, -21.5298, -15.9443, 1.1, -35.5298, -15.9443, 1.1, -33.5298, -13.6943, 1.1, -33.5298, -10.9443, 1.1, -35.5298, -10.9443, 1.1, -35.5298, -13.6943, 1.1, -33.5298, -12.9443, 1.1, -32.7798, -12.9443, 1.1, -24.2798, -13.6943, 1.1, -23.5298, -10.9443, 1.1, -21.5298, -12.9443, 1.1, -32.7798, -12.9443, 1.1, -24.2798, -10.9443, 1.1, -21.5298, -10.9443, 1.1, -35.5298, 8.05573, 1.1, -31.5298, 8.05573, 1.1, -29.5298, 10.3057, 1.1, -29.5298, 13.0557, 1.1, -31.5298, 11.0557, 1.1, -28.7798, 11.0557, 1.1, -10.2798, 13.0557, 1.1, -10.2798, 13.0557, 1.1, -31.5298, 13.0557, 1.1, -31.5298, 10.3057, 1.1, -29.5298, 11.0557, 1.1, -28.7798, -40.1943, 1.1, -21.5298, -15.6943, 1.1, -21.5298, -15.6943, 1.1, -23.5298, -40.1943, 1.1, -23.5298, -12.9443, 1.1, -10.5298, -10.9443, 1.1, -10.5298, -10.9443, 1.1, -12.7798, -12.9443, 1.1, -15.5298, 1.80573, 1.1, -15.5298, -0.944267, 1.1, -16.2798, -1.69427, 1.1, -15.5298, 5.05573, 1.1, -13.5298, -12.9443, 1.1, -15.5298, -10.9443, 1.1, -12.7798, -10.1943, 1.1, -13.5298, 5.05573, 1.1, -13.5298, 5.05573, 1.1, -15.5298, 1.80573, 1.1, -15.5298, 1.05573, 1.1, -16.2798, 1.05573, 1.1, -23.5298, -0.944267, 1.1, -23.5298, -0.944267, 1.1, -16.2798, -10.1943, 1.1, -13.5298, 5.05573, 1.1, -13.5298, -1.69427, 1.1, -15.5298, -12.9443, 1.1, -15.5298, 1.80573, 1.1, -15.5298, 1.05573, 1.1, -16.2798, -0.944267, 1.1, -16.2798, -42.9443, 1.1, -18.7798, -44.9443, 1.1, -18.7798, -44.9443, 1.1, 20.4702, -42.9443, 1.1, 20.4702, -13.6943, 1.1, -3.5298, -15.6943, 1.1, -3.5298, -15.6943, 1.1, -1.5298, -10.9443, 1.1, -8.2798, -10.9443, 1.1, -10.5298, -12.9443, 1.1, -10.5298, -13.6943, 1.1, -3.5298, -15.6943, 1.1, -1.5298, -10.9443, 1.1, -1.5298, -10.9443, 1.1, -4.7798, -10.1943, 1.1, -7.5298, -10.9443, 1.1, -8.2798, -10.1943, 1.1, -5.5298, -12.9443, 1.1, -4.2798, -13.6943, 1.1, -3.5298, -10.9443, 1.1, -4.7798, -12.9443, 1.1, -4.2798, -10.9443, 1.1, -4.7798, -10.1943, 1.1, -5.5298, -10.9443, 1.1, -8.2798, -12.9443, 1.1, -10.5298, -10.1943, 1.1, -5.5298, -4.94427, 1.1, -5.5298, -4.94427, 1.1, -7.5298, -10.1943, 1.1, -7.5298, 13.0557, 1.1, -10.2798, 11.0557, 1.1, -10.2798, 11.0557, 1.1, -8.2798, 13.0557, 1.1, -5.5298, 10.3057, 1.1, -7.5298, -0.944267, 1.1, -7.5298, -0.944267, 1.1, -5.5298, 13.0557, 1.1, -5.5298, 13.0557, 1.1, -5.5298, 11.0557, 1.1, -8.2798, 10.3057, 1.1, -7.5298, -34.9443, 1.1, 1.2202, -32.9443, 1.1, 1.2202, -32.9443, 1.1, -0.7798, -34.9443, 1.1, -3.5298, -32.1943, 1.1, -1.5298, -15.6943, 1.1, -1.5298, -15.6943, 1.1, -3.5298, -34.9443, 1.1, -3.5298, -34.9443, 1.1, -3.5298, -32.9443, 1.1, -0.7798, -32.1943, 1.1, -1.5298, 32.3057, 1.1, 0.4702, 32.3057, 1.1, 2.4702, 34.3057, 1.1, 2.4702, 34.3057, 1.1, 0.4702, 35.0557, 1.1, 3.2202, 35.0557, 1.1, 6.4702, 45.0557, 1.1, 6.4702, 35.0557, 1.1, -0.2798, 34.3057, 1.1, 0.4702, 34.3057, 1.1, 2.4702, 35.0557, 1.1, 3.2202, 45.0557, 1.1, 6.4702, 45.0557, 1.1, -3.5298, 45.0557, 1.1, -3.5298, 35.0557, 1.1, -3.5298, 35.0557, 1.1, -0.2798, 1.05573, 1.1, -1.5298, -0.944267, 1.1, -1.5298, -0.944267, 1.1, 7.7202, 1.05573, 1.1, 10.4702, -14.1943, 1.1, 10.4702, 1.05573, 1.1, 10.4702, -1.69427, 1.1, 8.4702, -14.1943, 1.1, 8.4702, 1.05573, 1.1, 10.4702, -0.944267, 1.1, 7.7202, -1.69427, 1.1, 8.4702, 9.80573, 1.1, 2.4702, 11.8057, 1.1, 2.4702, 11.8057, 1.1, 0.4702, 7.05573, 1.1, 0.4702, 7.05573, 1.1, 19.7202, 6.30573, 1.1, 20.4702, 9.05573, 1.1, 22.4702, 9.05573, 1.1, 3.2202, 9.80573, 1.1, 2.4702, 7.05573, 1.1, 0.4702, 6.30573, 1.1, 20.4702, 3.05573, 1.1, 20.4702, 3.05573, 1.1, 22.4702, 9.05573, 1.1, 22.4702, 7.05573, 1.1, 19.7202, 9.05573, 1.1, 22.4702, 9.05573, 1.1, 3.2202, 7.05573, 1.1, 0.4702, 11.8057, 1.1, 2.4702, 32.3057, 1.1, 2.4702, 32.3057, 1.1, 0.4702, 11.8057, 1.1, 0.4702, -34.9443, 1.1, 13.2202, -32.9443, 1.1, 13.2202, -32.9443, 1.1, 11.2202, -32.9443, 1.1, 7.7202, -32.9443, 1.1, 1.2202, -34.9443, 1.1, 1.2202, -34.9443, 1.1, 13.2202, -32.1943, 1.1, 10.4702, -21.6943, 1.1, 10.4702, -21.6943, 1.1, 8.4702, -32.1943, 1.1, 8.4702, -32.9443, 1.1, 7.7202, -34.9443, 1.1, 13.2202, -32.9443, 1.1, 11.2202, -32.1943, 1.1, 8.4702, -32.1943, 1.1, 8.4702, -32.9443, 1.1, 11.2202, -32.1943, 1.1, 10.4702, -21.6943, 1.1, 8.4702, -21.6943, 1.1, 10.4702, -19.6943, 1.1, 10.4702, -19.6943, 1.1, 8.4702, -16.9443, 1.1, 7.7202, -16.9443, 1.1, 4.4702, -18.9443, 1.1, 4.4702, -18.9443, 1.1, 7.7202, -18.9443, 1.1, 11.2202, -18.9443, 1.1, 13.2202, -16.9443, 1.1, 13.2202, -16.9443, 1.1, 11.2202, -18.9443, 1.1, 7.7202, -19.6943, 1.1, 8.4702, -19.6943, 1.1, 10.4702, -16.1943, 1.1, 10.4702, -14.1943, 1.1, 10.4702, -14.1943, 1.1, 8.4702, -16.1943, 1.1, 8.4702, -16.9443, 1.1, 11.2202, -16.1943, 1.1, 10.4702, -16.1943, 1.1, 8.4702, -19.6943, 1.1, 10.4702, -18.9443, 1.1, 11.2202, -16.9443, 1.1, 11.2202, -16.1943, 1.1, 8.4702, -16.9443, 1.1, 7.7202, -18.9443, 1.1, 7.7202, -34.9443, 1.1, 25.2202, -32.9443, 1.1, 25.2202, -32.9443, 1.1, 23.2202, -32.9443, 1.1, 19.7202, -32.9443, 1.1, 13.2202, -34.9443, 1.1, 13.2202, -34.9443, 1.1, 25.2202, -32.1943, 1.1, 22.4702, -24.9443, 1.1, 22.4702, -24.9443, 1.1, 20.4702, -32.1943, 1.1, 20.4702, -32.9443, 1.1, 19.7202, -34.9443, 1.1, 25.2202, -32.9443, 1.1, 23.2202, -32.1943, 1.1, 20.4702, -32.1943, 1.1, 20.4702, -32.9443, 1.1, 23.2202, -32.1943, 1.1, 22.4702, -16.9443, 1.1, 19.7202, -16.9443, 1.1, 13.2202, -18.9443, 1.1, 13.2202, -18.9443, 1.1, 22.4702, -0.944267, 1.1, 22.4702, -0.944267, 1.1, 20.4702, -16.1943, 1.1, 20.4702, -18.9443, 1.1, 22.4702, -16.1943, 1.1, 20.4702, -16.9443, 1.1, 19.7202, -18.9443, 1.1, 22.4702, -32.9443, 1.1, 35.7202, -32.9443, 1.1, 25.2202, -34.9443, 1.1, 25.2202, -34.9443, 1.1, 38.4702, -17.6943, 1.1, 38.4702, -17.6943, 1.1, 36.4702, -32.1943, 1.1, 36.4702, -34.9443, 1.1, 38.4702, -32.1943, 1.1, 36.4702, -32.9443, 1.1, 35.7202, -34.9443, 1.1, 38.4702, -15.6943, 1.1, 36.4702, -17.6943, 1.1, 36.4702, -17.6943, 1.1, 38.4702, -15.6943, 1.1, 36.4702, -17.6943, 1.1, 38.4702, -12.9443, 1.1, 38.4702, -12.9443, 1.1, 35.2202, 5.05573, 1.1, 34.4702, 3.05573, 1.1, 31.7202, 2.30573, 1.1, 32.4702, -14.9443, 1.1, 35.7202, -15.6943, 1.1, 36.4702, -12.9443, 1.1, 35.2202, -14.9443, 1.1, 35.7202, -12.9443, 1.1, 35.2202, -12.1943, 1.1, 34.4702, -14.9443, 1.1, 32.4702, -12.1943, 1.1, 34.4702, 5.05573, 1.1, 34.4702, 2.30573, 1.1, 32.4702, -14.9443, 1.1, 32.4702, 5.05573, 1.1, 26.4702, 3.05573, 1.1, 26.4702, 3.05573, 1.1, 31.7202, 5.05573, 1.1, 34.4702)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(5, 4, 6), PackedInt32Array(6, 4, 7), PackedInt32Array(10, 9, 8), PackedInt32Array(11, 14, 12), PackedInt32Array(12, 14, 13), PackedInt32Array(15, 17, 16), PackedInt32Array(19, 18, 20), PackedInt32Array(20, 18, 21), PackedInt32Array(25, 24, 22), PackedInt32Array(22, 24, 23), PackedInt32Array(28, 27, 26), PackedInt32Array(30, 29, 31), PackedInt32Array(31, 29, 32), PackedInt32Array(35, 34, 33), PackedInt32Array(38, 37, 36), PackedInt32Array(41, 40, 39), PackedInt32Array(43, 42, 44), PackedInt32Array(44, 42, 45), PackedInt32Array(49, 48, 46), PackedInt32Array(46, 48, 47), PackedInt32Array(53, 52, 50), PackedInt32Array(50, 52, 51), PackedInt32Array(56, 55, 54), PackedInt32Array(60, 59, 57), PackedInt32Array(57, 59, 58), PackedInt32Array(62, 61, 63), PackedInt32Array(63, 61, 64), PackedInt32Array(67, 66, 65), PackedInt32Array(69, 68, 70), PackedInt32Array(70, 68, 71), PackedInt32Array(73, 72, 74), PackedInt32Array(74, 72, 75), PackedInt32Array(77, 76, 78), PackedInt32Array(78, 76, 79), PackedInt32Array(82, 81, 80), PackedInt32Array(85, 84, 83), PackedInt32Array(86, 89, 87), PackedInt32Array(87, 89, 88), PackedInt32Array(91, 90, 92), PackedInt32Array(92, 90, 93), PackedInt32Array(95, 94, 96), PackedInt32Array(96, 94, 97), PackedInt32Array(100, 99, 98), PackedInt32Array(104, 103, 101), PackedInt32Array(101, 103, 102), PackedInt32Array(106, 105, 107), PackedInt32Array(107, 105, 108), PackedInt32Array(110, 109, 111), PackedInt32Array(111, 109, 112), PackedInt32Array(115, 114, 113), PackedInt32Array(118, 117, 116), PackedInt32Array(122, 121, 119), PackedInt32Array(119, 121, 120), PackedInt32Array(126, 125, 123), PackedInt32Array(123, 125, 124), PackedInt32Array(129, 128, 127), PackedInt32Array(133, 132, 130), PackedInt32Array(130, 132, 131), PackedInt32Array(136, 135, 134), PackedInt32Array(139, 138, 137), PackedInt32Array(143, 142, 140), PackedInt32Array(140, 142, 141), PackedInt32Array(146, 145, 144), PackedInt32Array(147, 149, 148), PackedInt32Array(151, 150, 152), PackedInt32Array(152, 150, 153), PackedInt32Array(153, 150, 154), PackedInt32Array(158, 157, 155), PackedInt32Array(155, 157, 156), PackedInt32Array(160, 159, 161), PackedInt32Array(161, 159, 162), PackedInt32Array(164, 163, 165), PackedInt32Array(165, 163, 166), PackedInt32Array(169, 168, 167), PackedInt32Array(171, 170, 172), PackedInt32Array(172, 170, 173), PackedInt32Array(175, 174, 176), PackedInt32Array(176, 174, 177), PackedInt32Array(180, 179, 178), PackedInt32Array(184, 183, 181), PackedInt32Array(181, 183, 182), PackedInt32Array(187, 186, 185), PackedInt32Array(189, 188, 190), PackedInt32Array(190, 188, 191), PackedInt32Array(191, 188, 193), PackedInt32Array(191, 193, 192), PackedInt32Array(196, 195, 194), PackedInt32Array(198, 197, 199), PackedInt32Array(199, 197, 200), PackedInt32Array(204, 203, 201), PackedInt32Array(201, 203, 202), PackedInt32Array(207, 206, 205), PackedInt32Array(209, 208, 210), PackedInt32Array(210, 208, 211), PackedInt32Array(214, 213, 212), PackedInt32Array(217, 216, 215), PackedInt32Array(219, 218, 220), PackedInt32Array(220, 218, 221), PackedInt32Array(225, 224, 222), PackedInt32Array(222, 224, 223), PackedInt32Array(229, 228, 226), PackedInt32Array(226, 228, 227), PackedInt32Array(232, 231, 230), PackedInt32Array(234, 233, 235), PackedInt32Array(235, 233, 236), PackedInt32Array(240, 239, 237), PackedInt32Array(237, 239, 238), PackedInt32Array(244, 243, 241), PackedInt32Array(241, 243, 242), PackedInt32Array(247, 246, 245), PackedInt32Array(251, 250, 248), PackedInt32Array(248, 250, 249), PackedInt32Array(255, 254, 252), PackedInt32Array(252, 254, 253), PackedInt32Array(259, 258, 256), PackedInt32Array(256, 258, 257), PackedInt32Array(262, 261, 260), PackedInt32Array(266, 265, 263), PackedInt32Array(263, 265, 264), PackedInt32Array(269, 268, 267), PackedInt32Array(271, 270, 272), PackedInt32Array(272, 270, 275), PackedInt32Array(272, 275, 274), PackedInt32Array(272, 274, 273), PackedInt32Array(278, 277, 276), PackedInt32Array(280, 279, 281), PackedInt32Array(281, 279, 282), PackedInt32Array(286, 285, 283), PackedInt32Array(283, 285, 284), PackedInt32Array(290, 289, 287), PackedInt32Array(287, 289, 288), PackedInt32Array(293, 292, 291), PackedInt32Array(295, 294, 296), PackedInt32Array(296, 294, 297), PackedInt32Array(299, 298, 300), PackedInt32Array(300, 298, 301), PackedInt32Array(304, 303, 302), PackedInt32Array(306, 305, 307), PackedInt32Array(307, 305, 308), PackedInt32Array(310, 309, 311), PackedInt32Array(311, 309, 312), PackedInt32Array(315, 314, 313), PackedInt32Array(318, 317, 316), PackedInt32Array(322, 321, 319), PackedInt32Array(319, 321, 320), PackedInt32Array(325, 324, 323), PackedInt32Array(326, 328, 327), PackedInt32Array(330, 329, 331), PackedInt32Array(331, 329, 332), PackedInt32Array(336, 335, 333), PackedInt32Array(333, 335, 334), PackedInt32Array(338, 337, 339), PackedInt32Array(339, 337, 340)]
agent_radius = 1.0
agent_max_climb = 0.2
agent_max_slope = 30.0

[sub_resource type="Animation" id="Animation_60mb5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Happy:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spooky:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vk2k3"]
resource_name = "happy_to_spooky"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Happy:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [0.0, -80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spooky:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_epauk"]
_data = {
"RESET": SubResource("Animation_60mb5"),
"happy_to_spooky": SubResource("Animation_vk2k3")
}

[node name="FlatWorld" type="Node3D"]
script = ExtResource("1_p3qbx")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.32671, 0.378498, 0, 0.756995, 0.653421, -0.5, 0.565879, -0.655577, 0, 0, 0)
light_energy = 0.5
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kd5np")

[node name="Player" parent="." instance=ExtResource("1_v1bb4")]
transform = Transform3D(0.578954, 0, -0.81536, 0, 1, 0, 0.81536, 0, 0.578954, -44.9016, 1.77557, 20.5414)
jump_velocity = 2.0

[node name="ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ground"]
shape = SubResource("BoxShape3D_mjjxq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ground"]
mesh = SubResource("BoxMesh_8j2oj")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_4i2ii")

[node name="Maze" parent="NavigationRegion3D" instance=ExtResource("7_i81qi")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -43.9443, 0.6, -22.5298)

[node name="in-walls" type="Node" parent="NavigationRegion3D"]
script = ExtResource("8_pchs4")

[node name="maze-wall" parent="NavigationRegion3D/in-walls" instance=ExtResource("9_7bilm")]
transform = Transform3D(-8.74228e-08, 0, 2, 0, 2, 0, -2, 0, -8.74228e-08, -1.94, 0.6, -6.525)

[node name="maze-wall2" parent="NavigationRegion3D/in-walls" instance=ExtResource("9_7bilm")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 4.06953, 0.6, 25.4688)

[node name="out-walls" type="Node" parent="NavigationRegion3D"]
script = ExtResource("8_pchs4")

[node name="maze-wall" parent="NavigationRegion3D/out-walls" instance=ExtResource("9_7bilm")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0.0599999, 0.6, -2.525)

[node name="maze-wall2" parent="NavigationRegion3D/out-walls" instance=ExtResource("9_7bilm")]
transform = Transform3D(-8.74228e-08, 0, 2, 0, 2, 0, -2, 0, -8.74228e-08, 2.06953, 0.6, 21.4688)

[node name="Slime" parent="." instance=ExtResource("4_jjw44")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.6257, 0.924189, 14.0904)

[node name="end of path" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 44.2367, 0, 1.72056)

[node name="I love you" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.1543, 0, -6.53885)

[node name="start of path" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.7417, 0, -22.4492)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StageLabel" type="Label" parent="CanvasLayer"]
offset_left = 3.0
offset_top = 5.0
offset_right = 303.0
offset_bottom = 28.0

[node name="DialogAnchor" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 29.0
offset_top = 142.0
offset_right = 29.0
offset_bottom = 142.0

[node name="MUSIC" type="Node" parent="."]

[node name="music_animation" type="AnimationPlayer" parent="MUSIC"]
libraries = {
"": SubResource("AnimationLibrary_epauk")
}

[node name="Happy" type="AudioStreamPlayer" parent="MUSIC"]
stream = ExtResource("7_sl3rh")
autoplay = true

[node name="Spooky" type="AudioStreamPlayer" parent="MUSIC"]
stream = ExtResource("8_bke3n")
autoplay = true

[connection signal="target_reached" from="Slime" to="." method="_on_slime_target_reached"]
